--- a/project.json
+++ b/project.json
@@ -18,7 +18,7 @@
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
         "project": "projects/onlyoffice-alfresco-extension/ng-package.json",
-        "tsConfig": "projects/onlyoffice-alfresco-extension/tsconfig.lib.json",
+        "tsConfig": "projects/onlyoffice-alfresco-extension/tsconfig.lib.json"
       },
       "configurations": {
         "production": {
