--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "name": "@onlyoffice/alfresco-extension",
   "version": "0.0.1",
+  "description": "Some description",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/ONLYOFFICE/onlyoffice-alfresco-extension/issues",
+    "email": "support@onlyoffice.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://git.onlyoffice.com/ONLYOFFICE/onlyoffice-alfresco-extension.git"
+  },
+  "homepage": "https://github.com/ONLYOFFICE/onlyoffice-alfresco-extension#readme",
+  "author": "Ascensio System SIA <integration@onlyoffice.com> (https://www.onlyoffice.com)",
+  "maintainers": [
+    "Ascensio System SIA <integration@onlyoffice.com> (https://www.onlyoffice.com)"
+  ],
+  "keywords": [
+    "docs",
+    "office",
+    "alfresco",
+    "onlyoffice"
+  ],
   "peerDependencies": {
     "@angular/common": "^19.2.0",
     "@angular/core": "^19.2.0",
