build: update dependencies versions

--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
     "onlyoffice"
   ],
   "peerDependencies": {
+    "@alfresco/aca-content": "^0.0.1",
+    "@alfresco/aca-shared": "^0.0.1",
+    "@alfresco/adf-content-services": "^8.0.0",
+    "@alfresco/adf-core": "^8.0.0",
+    "@alfresco/adf-extensions": "^8.0.0",
+    "@alfresco/js-api": "^9.0.0",
     "@angular/common": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.6",
     "@angular/material": "^19.2.9",
     "@angular/platform-browser": "^19.2.6",
     "@angular/router": "^19.2.6",
-    "@alfresco/aca-content": "^0.0.1",
-    "@alfresco/aca-shared": "^0.0.1",
-    "@alfresco/adf-content-services": "^8.4.0-17732104912",
-    "@alfresco/adf-core": "^8.4.0-17732104912",
-    "@alfresco/adf-extensions": "^8.4.0-17732104912",
-    "@alfresco/js-api": "^9.4.0-17732104912",
-    "@ngrx/effects": "19.2.1",
-    "@ngrx/store": "19.2.1",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
     "@ngx-translate/core": "^16.0.4",
     "@onlyoffice/document-editor-angular": "^6.5.1",
-    "rxjs": "7.8.2"
+    "rxjs": "^7.8.2"
   },
   "sideEffects": false
 }
